<?xml version="1.0"?>
<package format="3">
  <name>uav_control_msgs</name>
  <version>0.0.0</version>
  <description>UAV CONTROL MSGS for ROS 2</description>
  <maintainer email="abdulkadirthe@gmail.com">Abdulkadir Türe</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
</package>

